--- a/09themeswitcher/src/index.css
+++ b/09themeswitcher/src/index.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+/* to toggle dark mode */
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
